{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 137,
  "lineage": "6492c954-19c8-1f4f-262f-19259a8881b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM_Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:682086073548:instance/i-04a70830d10c8de0d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a70830d10c8de0d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudiantes_automatizacion_2021_1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d305a2a40b2e144",
            "private_dns": "ip-10-0-1-218.us-east-2.compute.internal",
            "private_ip": "10.0.1.218",
            "public_ip": "18.223.196.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f227fd283ec312f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ad268ab508cdbd8d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cacd026fc13e83d",
            "tags": {
              "Name": "jenkins_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad268ab508cdbd8d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_infraestructure",
            "aws_subnet.jenkins_public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:682086073548:internet-gateway/igw-06b68060efb888311",
            "id": "igw-06b68060efb888311",
            "owner_id": "682086073548",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0a5883fd291017704"
          },
          "dependencies": [
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dfba4de5c6d397c1",
            "owner_id": "682086073548",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b68060efb888311",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt"
            },
            "vpc_id": "vpc-0a5883fd291017704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084819d3e09adbde3",
            "route_table_id": "rtb-0dfba4de5c6d397c1",
            "subnet_id": "subnet-0be55a66119704d56"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.jenkins_public_subnet_2",
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fec0bdd16b3b365",
            "route_table_id": "rtb-0dfba4de5c6d397c1",
            "subnet_id": "subnet-07cacd026fc13e83d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.jenkins_public_subnet_1",
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_infraestructure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:682086073548:security-group/sg-0ad268ab508cdbd8d",
            "description": "security group for instances of Jenkins on infraestructure",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad268ab508cdbd8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sg_infraestructure",
            "name_prefix": "",
            "owner_id": "682086073548",
            "revoke_rules_on_delete": false,
            "tags": {
              "responsible": "sg_infraestructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5883fd291017704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:682086073548:subnet/subnet-07cacd026fc13e83d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07cacd026fc13e83d",
            "map_public_ip_on_launch": true,
            "owner_id": "682086073548",
            "tags": {
              "Name": "jenkins_public_subnet_1"
            },
            "vpc_id": "vpc-0a5883fd291017704"
          },
          "dependencies": [
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:682086073548:subnet/subnet-0be55a66119704d56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0be55a66119704d56",
            "map_public_ip_on_launch": true,
            "owner_id": "682086073548",
            "tags": {
              "Name": "jenkins_public_subnet_2"
            },
            "vpc_id": "vpc-0a5883fd291017704"
          },
          "dependencies": [
            "aws_vpc.vpc_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:682086073548:vpc/vpc-0a5883fd291017704",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cb3332997bf0438",
            "default_route_table_id": "rtb-08a9ea696be5db6c7",
            "default_security_group_id": "sg-0a222d9a963d96720",
            "dhcp_options_id": "dopt-0449b5b3cc14d7f17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a5883fd291017704",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a9ea696be5db6c7",
            "owner_id": "682086073548",
            "tags": {
              "Name": "vpc_jenkins"
            }
          }
        }
      ]
    }
  ]
}